# avatar-cli

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  commitlint.config.js  package-lock.json  package.json
.avatar-cli/: Avatarfile  avatar-cli.lock.yml  avatar-cli.yml
.github/: FUNDING.yml
cx/: .editorconfig  .eslintrc.js  .gitlab-ci.yml  .huskyhook  package-lock.json  package.json  tsconfig.json
cx/src/: example.ts
cx/src/lib/: cxEnv.ts  exec.ts  git.ts  plumberEnv.ts  version.ts
cx/src/scripts/: git_checks.ts  gitlab_publish.ts  pkg_version_info.ts  post_commit.ts  pre_commit.ts  prepare_commit_msg.ts  run.js
src/: avatar_env.rs  cmd_run.rs  cmd_shell.rs  directories.rs  docker.rs  main.rs  project_config.rs  subcommand.rs
src/embedded_files/: bin_wrapper.sh
src/subcommands/: init.rs  install.rs  mod.rs  run.rs  shell.rs
