[package]
name = "avatar-cli"
version = "0.14.1"
license = "GPL-3.0"
authors = [ "Andres Correa Casablanca <castarco@coderspirit.xyz>" ]
keywords = [ "cli", "containers", "docker" ]
categories = [
  "config",
  "command-line-utilities",
  "development-tools",
  "emulators"
]
description = "Magic wrapper to run containerized CLI tools"
readme = "README.md"
repository = "https://gitlab.com/avatar-cli/avatar-cli.git"
edition = "2018"
include = [ "src/**/*", "Cargo.toml", "Cargo.lock" ]

[badges.gitlab]
repository = "https://gitlab.com/avatar-cli/avatar-cli.git"
branch = "main"

[badges.maintenance]
status = "experimental"

[dependencies]
atty = "0.2"
clap = "2.33.1"
dirs = "3.0.1"
duct = "0.13.4"
exitcode = "1.1.2"
nix = "0.17.0"
ring = "0.16.15"
serde_yaml = "0.8"
which = "4.0.1"

  [dependencies.hex]
  version = "0.4"
  features = [ "serde" ]

  [dependencies.rand]
  version = "0.7"
  default-features = false
  features = [ "std" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[profile.release]
codegen-units = 1
lto = true
